force-app/main/default/objects/Trolley_Invoice__c/Trolley_Invoice__c.object-meta.xml
<CustomObject>
    <label>Trolley Invoice</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Trolley Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trolley Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>