force-app/main/default/objects/Trolley_Invoice__c/fields/Cover_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cover_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover Fee</label>
    <type>Checkbox</type>
</CustomField>