force-app/main/default/objects/Trolley_Invoice__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>