force-app/main/default/objects/Trolley_Invoice__c/fields/Non_QB_Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Non_QB_Expense_Description__c</fullName>
    <formula>Non_Torc_User__r.Name +&apos; &apos; + trolley_Invoicing_Payment_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non QB Expense Description</label>
    <type>Text</type>
</CustomField>