force-app/main/default/objects/Trolley_Invoice__c/fields/Pass_Number__c.field-meta.xml
<CustomField>
    <fullName>Pass_Number__c</fullName>
    <label>Pass Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>