force-app/main/default/objects/Trolley_Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <defaultValue>&quot;pending&quot;</defaultValue>
    <label>Payment Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>