force-app/main/default/objects/Trolley_Invoice__c/fields/Paypal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Fee__c</fullName>
    <label>Paypal Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>