force-app/main/default/objects/Trolley_Invoice__c/fields/Paypal_ID__c.field-meta.xml
<CustomField>
    <fullName>Paypal_ID__c</fullName>
    <label>Paypal ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>