force-app/main/default/objects/Trolley_Invoice__c/fields/Paypal_Status__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Status__c</fullName>
    <label>Paypal Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>