force-app/main/default/objects/Trolley_Invoice__c/fields/Paypal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Paypal_Summary__c</fullName>
    <label>Paypal Summary</label>
    <type>TextArea</type>
</CustomField>