force-app/main/default/objects/Trolley_Invoice__c/fields/QB_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_ID__c</fullName>
    <formula>IF( Non_Torc_User__c &lt;&gt;NULL, Non_Torc_User__r.Quick_Books_vendor_Id__c , Torc_User__r.Quick_Books_vendor_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB ID</label>
    <type>Text</type>
</CustomField>