force-app/main/default/objects/Trolley_Invoice__c/fields/QB_vendor__c.field-meta.xml
<CustomField>
    <fullName>QB_vendor__c</fullName>
    <formula>Torc_User__r.Quickbooks_Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB vendor</label>
    <type>Text</type>
</CustomField>