force-app/main/default/objects/Trolley_Invoice__c/fields/QB_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Vendor_Name__c</fullName>
    <formula>IF( Non_Torc_User__c &lt;&gt;NULL, Non_Torc_User__r.Quickbooks_Vendor__c , Torc_User__r.Quickbooks_Vendor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB Vendor Name</label>
    <type>Text</type>
</CustomField>