force-app/main/default/objects/Trolley_Invoice__c/fields/Ready_To_Process_Paypal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Process_Paypal_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Process Paypal Fee</label>
    <type>Checkbox</type>
</CustomField>