force-app/main/default/objects/Trolley_Invoice__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <formula>Trolley_Recipient__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>