force-app/main/default/objects/Trolley_Invoice__c/fields/Toggle_Cover_Fee__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Cover_Fee__c</fullName>
    <formula>IF( Payment_Status__c =&apos;processed&apos;,&apos;#N/A&apos;,
HYPERLINK(&apos;/apex/trolleyInvoiceUpdate?id=&apos;+ Id,
IF( Cover_Fee__c ,&apos;Uncover Fee&apos;,&apos;Cover Fee&apos;) ,
&apos;_Parent&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toggle Cover Fee</label>
    <type>Text</type>
</CustomField>