force-app/main/default/objects/Trolley_Invoice__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Trolley Invoices</relationshipLabel>
    <relationshipName>Trolley_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>