force-app/main/default/objects/Trolley_Invoice__c/fields/Trolley_Id__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Id__c</fullName>
    <label>Trolley Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>