force-app/main/default/objects/Trolley_Invoice__c/fields/trolley_Invoicing_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>trolley_Invoicing_Payment_Id__c</fullName>
    <label>Trolley Invoicing Payment Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>