force-app/main/default/objects/Trolley_Invoice__c/fields/Trolley_Paypal_Batch__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Paypal_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paypal Batch</label>
    <referenceTo>Trolley_Paypal_Batch__c</referenceTo>
    <relationshipLabel>Trolley Invoices</relationshipLabel>
    <relationshipName>Trolley_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>