force-app/main/default/objects/Trolley_Invoice__c/fields/Trolley_Paypal_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Paypal_Batch_Id__c</fullName>
    <label>Paypal Batch Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>